# doris

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  QUICKSTART.md  README.Bazel.md  RUST_FE_STATUS.md  WORKSPACE.bazel  rust_fe_migration_todos.md  todos.md  tools.md
bazel/test/: BUILD.bazel  hello_bazel.cc
be/: BUILD.bazel  README.bazel.md
be/src/cloud/: BUILD.bazel
be/src/common/: BUILD.bazel
be/src/exec/: BUILD.bazel
be/src/exprs/: BUILD.bazel
be/src/geo/: BUILD.bazel
be/src/http/: BUILD.bazel
be/src/io/: BUILD.bazel
be/src/olap/: BUILD.bazel
be/src/runtime/: BUILD.bazel
be/src/service/: BUILD.bazel
be/src/util/: BUILD.bazel
be/src/vec/: BUILD.bazel
be/test/: BUILD.bazel
be/test/common/: BUILD.bazel
be/test/util/: BUILD.bazel
gensrc/: BUILD.bazel
rust-fe/: ACTION_PLAN.md  AGENTS.md  ARCHITECTURE.md  BENCHMARK_GUIDE.md  BENCHMARK_QUICKSTART.md  BENCHMARK_RESULTS.md  BUILD_REQUIREMENTS.md  BUILD_STATUS.md  CLAUDE.md  CLICKBENCH_VISUALIZATION.md  COMPILATION_FIX_STATUS.md  Cargo.toml  DATAFUSION_APPROACH.md  DATA_LOADING_GUIDE.md  DOCKER_VERIFICATION.md  Dockerfile  Dockerfile.simple  ENHANCED_PAYLOAD_SUMMARY.md  FE_API_BENCHMARK.md  FE_COMPARISON_CHARTS_PLAN.md  FINAL_STATUS.md  FRAGMENT_ANALYSIS_2025-11-17.md  IMPLEMENTATION_SUMMARY.md  JAVA_FE_RESEARCH.md  MYSQL_TIMEOUT_DIAGNOSIS.md  Makefile  OPENSRV_MIGRATION.md  OPTION_A_RESULTS.md  OPTION_B_PLAN.md  OPTION_B_STATUS.md  PAYLOAD_COMPARISON_FINDINGS.md  PERFORMANCE_VALIDATION_REPORT.md  PHASE1_DEMO.md  POSTGRES_EXTENSION.md  PROVE_BE_INTEGRATION.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_BENCHMARK.md  (+56 more)
rust-fe/benches/: tpch_benchmark.rs
rust-fe/docker/: README.md  fe.conf  quickstart.sh  start-fe.sh  test-query.sh
rust-fe/docs/: BENCHMARKING_GUIDE.md  DISTRIBUTED_QUERY_OPTIMIZATIONS.md  TEST_INFRASTRUCTURE_RESEARCH.md  TEST_SUMMARY.md
rust-fe/doris-thrift/: Cargo.toml  build.rs
rust-fe/doris-thrift/src/: lib.rs
rust-fe/examples/: datafusion_test.rs  decode_compact_generated.rs  decode_java_compact.rs  decode_scan_ranges.rs  decode_thrift.rs  decode_thrift_compact.rs  generate_payload.rs  grpc_client_test.rs  integration_test.rs  mock_be_server.rs  option_b_end_to_end.rs  option_b_phase2_test.rs  option_b_test.rs  query_test.rs  tpch_lineitem_fragment.rs
rust-fe/proto/: backend_service.proto  segment_v2.proto
rust-fe/scripts/: README.md  benchmark_clickbench.py  benchmark_fe_api.sh  benchmark_fe_api_visual.sh  benchmark_fe_comparison.sh  benchmark_sf100_comparison.sh  benchmark_tpcds.py  benchmark_tpcds.sh  benchmark_tpch.py  benchmark_tpch.sh  build_be_and_rust_fe.sh  capture_tpch_payload.sh  compare_payloads_simple.sh  compare_thrift_payloads.sh  extract_from_tcpdump.sh  extract_payload_simple.sh  extract_tcp_payload.py  extract_thrift_payload.py  extract_tpcds_queries.sh  generate_summary.sh  generate_tpcds_queries.py  mysql_cli_integration.sh  run_full_benchmark.sh  run_rust_fe_pblock_smoke.sh  simple_pcap_extract.py
rust-fe/scripts/tpcds/: README.md  generate_data.sh
rust-fe/scripts/tpch/: create_tables_sf100.sql  generate_data.sh
rust-fe/src/: config.rs  error.rs  lib.rs  main.rs  observability_tests.rs
rust-fe/src/be/: client.rs  load.rs  mod.rs  pool.rs  thrift_pipeline.rs
rust-fe/src/benchmark/: mod.rs  query_profiler.rs
rust-fe/src/catalog/: be_table.rs  mod.rs  tpch_tables.rs
rust-fe/src/http/: handlers.rs  mod.rs  server.rs  stream_load_tests.rs
rust-fe/src/meta_service/: keys.rs  mod.rs
rust-fe/src/metadata/: catalog.rs  mod.rs  schema.rs  types.rs
rust-fe/src/mysql/: connection.rs  mod.rs  opensrv_server.rs  opensrv_shim.rs  packet.rs  protocol.rs  protocol_tests.rs  server.rs
rust-fe/src/parser/: doris_dialect.rs  doris_parser.rs  mod.rs
rust-fe/src/planner/: admin_tests.rs  arrow_parser.rs  bucket_shuffle.rs  cost_model.rs  datafusion_planner.rs  ddl_tests.rs  dml_tests.rs  doris_feature_tests.rs  feature_flag_tests.rs  feature_flags.rs  fragment_executor.rs  mod.rs  (+10 more)
rust-fe/tests/: feature_flag_validation.rs  load_test.sh  mysql_integration.rs  mysql_opensrv_integration.rs  test_data.csv  verify_mysql.sh  verify_stream_load.sh
rust_fe/: BEHAVIOR_COMPARISON_TESTS.md  BE_CLIENT_IMPLEMENTATION.md  BE_INTEGRATION_REALITY_CHECK.md  BE_INTEGRATION_TEST_PLAN.md  BE_SETUP_AUTOMATION.md  BE_STARTUP_BLOCKER.md  BE_STARTUP_SUCCESS.md  BREAKTHROUGH_BE_RUNNING.md  BREAKTHROUGH_THRIFT_SOLUTION.md  CLAUDE.md  CLAUDE_MD_COMPLIANCE.md  CLAUDE_MD_IMPLEMENTATION_STATUS.md  CLOUDFLARE_TUNNEL_TEST.md  CRITICAL_BUG_FOUND.md  Cargo.toml  DATA_EXECUTION_STATUS.md  E2E_INTEGRATION_STATUS.md  E2E_TESTING_STATUS_FACTCHECK.md  E2E_TEST_RESULTS_2025-11-19.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS.md  INTEGRATION_STATUS.md  JAVA_BE_INTEGRATION_TEST.md  JAVA_FE_FACT_CHECK_REPORT.md  JAVA_FE_FACT_CHECK_SESSION_2025-11-19.md  JAVA_FE_INTEGRATION_STATUS.md  NEXT_STEPS_E2E_TESTING.md  NEXT_STEPS_REAL_QUERY_TESTING.md  PBLOCK_FORMAT_SPECIFICATION.md  PBLOCK_IMPLEMENTATION_PLAN.md  PIPELINE_EXECUTION_GUIDE.md  PLANNER_ARCHITECTURE.md  PROTOC_INSTALLATION.md  README.md  RUST_FE_STATUS.md  SESSION_CATALOG_INTEGRATION_2025-11-18.md  SESSION_E2E_QUERY_2025-11-19.md  SESSION_PBLOCK_IMPLEMENTATION_2025-11-18.md  SESSION_PROGRESS.md  SESSION_PROGRESS_2025-11-18.md  (+20 more)
rust_fe/fe-alter/: Cargo.toml
rust_fe/fe-analysis/: Cargo.toml
rust_fe/fe-backend-client/: Cargo.toml  build.rs
rust_fe/fe-catalog/: Cargo.toml
rust_fe/fe-common/: Cargo.toml  build.rs
rust_fe/fe-datasource/: Cargo.toml
rust_fe/fe-ha/: Cargo.toml
rust_fe/fe-http/: Cargo.toml
rust_fe/fe-job/: Cargo.toml
rust_fe/fe-load/: Cargo.toml
rust_fe/fe-main/: Cargo.toml
rust_fe/fe-metric/: Cargo.toml
rust_fe/fe-mysql-protocol/: Cargo.toml
rust_fe/fe-nereids/: Cargo.toml
rust_fe/fe-persist/: Cargo.toml
rust_fe/fe-planner/: Cargo.toml
rust_fe/fe-qe/: Cargo.toml
rust_fe/fe-rpc/: Cargo.toml
rust_fe/fe-service/: Cargo.toml
rust_fe/fe-statistics/: Cargo.toml
rust_fe/fe-system/: Cargo.toml
rust_fe/fe-transaction/: Cargo.toml
rust_fe/thrift-gen-rs/: Cargo.toml
(+276 files in other folders)
