# Apache Doris - Bazel Workspace
# Licensed to the Apache Software Foundation (ASF)
# Migration from CMake to Bazel for comprehensive and ultrafast building

workspace(name = "doris")

# Load http_archive and git_repository rules
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

# --------------------------
# Bazel Skylib (utilities)
# --------------------------
http_archive(
    name = "bazel_skylib",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.5.0/bazel-skylib-1.5.0.tar.gz",
    ],
    sha256 = "cd55a062e763b9349921f0f5db8c3933288dc8ba4f76dd9416aac68acee3cb94",
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

# --------------------------
# C++ Rules
# --------------------------
http_archive(
    name = "rules_cc",
    urls = ["https://github.com/bazelbuild/rules_cc/releases/download/0.0.9/rules_cc-0.0.9.tar.gz"],
    sha256 = "2037875b9a4456dce4a79d112a8ae885bbc4aad968e6587dca6e64f3a0900cdf",
    strip_prefix = "rules_cc-0.0.9",
)

load("@rules_cc//cc:repositories.bzl", "rules_cc_dependencies", "rules_cc_toolchains")
rules_cc_dependencies()
rules_cc_toolchains()

# --------------------------
# Proto Rules
# --------------------------
http_archive(
    name = "rules_proto",
    sha256 = "dc3fb206a2cb3441b485eb1e423165b231235a1ea9b031b4433cf7bc1fa460dd",
    strip_prefix = "rules_proto-5.3.0-21.7",
    urls = [
        "https://github.com/bazelbuild/rules_proto/archive/refs/tags/5.3.0-21.7.tar.gz",
    ],
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")
rules_proto_dependencies()
rules_proto_toolchains()

# --------------------------
# Protobuf (matches version used in Doris: 21.11)
# --------------------------
http_archive(
    name = "com_google_protobuf",
    urls = ["https://github.com/protocolbuffers/protobuf/releases/download/v21.11/protobuf-all-21.11.tar.gz"],
    strip_prefix = "protobuf-21.11",
    sha256 = "f045f136e61e367a9436571b6676b94e5e16631a06c864146688c3aaf7df794b",
)

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

# --------------------------
# Google Test (matches version used in Doris: 1.12.1)
# --------------------------
http_archive(
    name = "com_google_googletest",
    urls = ["https://github.com/google/googletest/archive/refs/tags/release-1.12.1.tar.gz"],
    strip_prefix = "googletest-release-1.12.1",
    sha256 = "81964fe578e9bd7c94dfdb09c8e4d6e6759e19967e397dbea48d1c10e45d0df2",
)

# --------------------------
# Google Benchmark (for performance testing)
# --------------------------
http_archive(
    name = "com_google_benchmark",
    urls = ["https://github.com/google/benchmark/archive/refs/tags/v1.8.3.tar.gz"],
    strip_prefix = "benchmark-1.8.3",
    sha256 = "6bc180a57d23d4d9515519f92b0c83d61b05b5bab188961f36ac7b06b0d9e9ce",
)

# --------------------------
# Abseil (modern C++ library, used by many Google projects)
# --------------------------
http_archive(
    name = "com_google_absl",
    urls = ["https://github.com/abseil/abseil-cpp/archive/refs/tags/20230802.1.tar.gz"],
    strip_prefix = "abseil-cpp-20230802.1",
    sha256 = "497ebdc3a4885d9209b9bd416e8c3f71e7a1fb8af249f6c2a80b7cbeefcd7e21",
)

# --------------------------
# Rules for Java (for FE migration in future phases)
# --------------------------
http_archive(
    name = "rules_java",
    urls = ["https://github.com/bazelbuild/rules_java/releases/download/6.5.2/rules_java-6.5.2.tar.gz"],
    sha256 = "16bc94b1a3c64f2c36ceecddc9e09a643e80937076b97e934b96a8f715ed1eaa",
)

load("@rules_java//java:repositories.bzl", "rules_java_dependencies", "rules_java_toolchains")
rules_java_dependencies()
rules_java_toolchains()

# --------------------------
# Hedron Compile Commands (for IDE integration - compile_commands.json)
# --------------------------
http_archive(
    name = "hedron_compile_commands",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/refs/tags/v0.5.2.tar.gz",
    strip_prefix = "bazel-compile-commands-extractor-0.5.2",
    sha256 = "d7ba7708f5cbcdcdbb0e96bc3c7d25c9243e4657c40c8c1a83b94f5c21a67f64",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")
hedron_compile_commands_setup()

# --------------------------
# Local Third-party Dependencies
# --------------------------
# This imports the existing third-party libraries built by thirdparty/build-thirdparty.sh
# We use cc_import rules in bazel/third_party/BUILD.bazel to wrap them for Bazel

local_repository(
    name = "doris_thirdparty",
    path = "thirdparty",
)

# --------------------------
# Platform Configuration
# --------------------------
# Platforms are defined in bazel/platforms/BUILD.bazel
# This enables select() to choose different dependencies/flags based on OS/arch
