# Apache Doris - Backend (BE) Root BUILD
# Licensed to the Apache Software Foundation (ASF)
#
# This is the root BUILD file for the Doris backend components.

package(default_visibility = ["//visibility:public"])

# Export configuration files
exports_files([
    "CMakeLists.txt",
    "cmake/thirdparty.cmake",
])

# Top-level backend library (combines all components)
# This will be populated incrementally as we migrate more components
# Note: Uses layered dependencies to break circular dependency cycles
cc_library(
    name = "backend_libs",
    deps = [
        # Foundation layers (no BE inter-dependencies)
        "//be/src/common:foundation",
        "//be/src/util:foundation",
        # Core layers (depend on foundations)
        "//be/src/common:core",
        "//be/src/util:core",
        # Higher-level layers (depend on foundations + cores)
        "//be/src/io:io",
        "//be/src/runtime:runtime",
        "//be/src/olap:olap",
        # Query execution layers
        "//be/src/exec:exec",            # Traditional query execution
        "//be/src/vec:vec",              # Vectorized execution engine (LARGEST: 424 files)
        "//be/src/exprs:exprs",          # Traditional expressions
        # Service layers
        "//be/src/http:http",            # HTTP server and REST API
        "//be/src/service:service",      # RPC services (Thrift, BRPC, Arrow Flight)
        # Optional components
        "//be/src/cloud:cloud",          # Cloud-native storage mode
        "//be/src/geo:geo",              # Geospatial functions
    ],
    visibility = ["//visibility:public"],
)

# Backend binary (doris_be) - placeholder for now
# Will be implemented after core libraries are migrated
# cc_binary(
#     name = "doris_be",
#     srcs = ["src/service/doris_be_main.cpp"],
#     deps = [
#         ":backend_libs",
#         "//bazel/third_party:jemalloc",
#     ],
#     linkopts = [
#         "-lpthread",
#         "-ldl",
#         "-lrt",
#     ],
# )

# All backend tests
alias(
    name = "all_tests",
    actual = "//be/test:all_tests",
)

# Quick test suite
alias(
    name = "quick_tests",
    actual = "//be/test:quick_tests",
)
