[package]
name = "doris-rust-fe"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# MySQL protocol
bytes = "1.5"
nom = "7.1"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# HTTP server for streaming load
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = "1.0"

# gRPC for BE communication
tonic = "0.11"
prost = "0.12"

# SQL Parser
sqlparser = "0.43"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# Utilities
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"
crossbeam-queue = "0.3"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "doris-rust-fe"
path = "src/main.rs"
