[package]
name = "doris-rust-fe"
version = "0.1.0"
edition = "2021"

[features]
default = ["opensrv"]
opensrv = ["opensrv-mysql"]
# Use real Doris BE internal_service.proto and fragment-based execution.
# When disabled, the PoC SQL-based backend_service.proto is used.
real_be_proto = []

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# MySQL protocol
opensrv-mysql = { version = "0.7.0", optional = true }
bytes = "1.5"
nom = "7.1"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
bitflags = "2.4"

# HTTP server for streaming load
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = "1.0"

# gRPC for BE communication
tonic = "0.11"
prost = "0.12"

# Thrift binary encoding for fragment serialization
thrift_codec = "0.3.2"
# Official Apache Thrift runtime for Compact protocol compatibility
thrift = "0.17.0"
# Thrift compact protocol runtime (Apache-compatible) for experiments
compact-thrift-runtime = { git = "https://github.com/jhorstmann/compact-thrift", package = "compact-thrift-runtime" }

# DataFusion for query planning and execution
datafusion = "43.0"
arrow = "53.0"
arrow-schema = "53.0"

# SQL Parser (DataFusion uses sqlparser internally, but keep for compatibility)
sqlparser = "0.43"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# Utilities
futures = "0.3"
async-trait = "0.1"
dashmap = "5.5"
crossbeam-queue = "0.3"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
lazy_static = "1.4"
chrono = "0.4"
toml = "0.9.8"
bytemuck = "1.16"

[dependencies.doris_thrift]
path = "doris-thrift"

[build-dependencies]
prost-build = "0.12"
tonic-build = { version = "0.11", default-features = false, features = ["prost"] }
protobuf-src = "1.1"  # Compiles protoc from source!

[lib]
name = "doris_rust_fe"
path = "src/lib.rs"

[[bin]]
name = "doris-rust-fe"
path = "src/main.rs"

[[bench]]
name = "tpch_benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
