[package]
name = "fe-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
fe-common = { path = "../fe-common" }
fe-planner = { path = "../fe-planner" }
fe-qe = { path = "../fe-qe" }
fe-catalog = { path = "../fe-catalog" }
doris-thrift = { path = "../thrift-gen-rs" }

# gRPC/Protobuf
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Thrift serialization
thrift = "0.17.0"

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling
anyhow.workspace = true

# PBlock parsing
byteorder = "1.5"
snap = "1.1"
log = "0.4"

[dev-dependencies]
mysql.workspace = true
sqlparser.workspace = true
hex = "0.4"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"
