[package]
name = "fe-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
toml.workspace = true
num_cpus.workspace = true
rustc_version_runtime.workspace = true

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
