[package]
name = "fe-mysql-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
byteorder = "1.5"
bytes.workspace = true
fe-common = { path = "../fe-common" }
mysql_async = "0.36.1"
mysql_common = "0.35.5"
rand = "0.9.2"
serde.workspace = true
sha1 = "0.10.6"
tokio = { workspace = true, features = ["full"] }
